kubernetes/apps/paperless/paperless-stats/app/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless-stats-exporter
  namespace: paperless
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: paperless-stats-exporter
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Paperless-ngx REST API (statistics/status/tasks)
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": paperless
            app.kubernetes.io/name: paperless
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    # OpenSearch write
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": logging
            opensearch.org/opensearch-cluster: opensearch
      toPorts:
        - ports:
            - port: "9200"
              protocol: TCP
